style.css
body {
  font-family:
    "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
    Arial, sans-serif;
  background-color: white;
  margin: 0;
  padding: 0;
  line-height: 1.6;
}
header {
  background-color: rgb(1, 27, 27);
  padding: 8px 0;
  text-align: center;
  font-size: 24px;
  font-weight: 600;
  color: rgb(240, 217, 217);
  text-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}
header a {
  color: inherit;
  text-decoration: none;
  margin-bottom: 14px;
  padding: 0;
  display: inline-block;
}
header h1 {
  margin: 0;
  font-size: 36px;
}
header h2 {
  margin: 0;
  font-size: 18px;
  color: rgb(250, 248, 248);
}
.logo {
  width: 90px;
  height: 90px;
  border-radius: 50%;
  margin-right: 10px;
  display: inline-block;
  align-items: center;
}
.logo:hover {
  transform: scale(1.1);
  transition: transform 0.3s ease;
}
nav a {
  background-color: rgb(1, 27, 27);
  padding: 8px;
  text-align: center;
  padding: 12px;
  color: aqua;
}

nav a:hover {
  background-color: rgb(1, 27, 27);
  color: white;
  transition:
    background-color 0.3s ease,
    color 0.3s ease;
}
nav {
  display: flex;
  justify-content: center;
  gap: 0px;
  margin-top: 0%;
}
section {
  padding: 20px;
  max-width: 1200px;
  gap: 0px;
  margin: 20px auto;
  background-color: rgb(1, 27, 27);
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.3s ease;
}
section:hover {
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}
.photo-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 20px;
}
.photo-grid figure {
  margin: 0;
  position: relative;
}
.photo-grid img {
  width: 100%;
  height: auto;
  border-radius: 8px;
  transition: transform 0.3s ease;
}
.photo-grid img:hover {
  transform: scale(1.05);
}
.photo-grid figcaption {
  margin-top: 11px;
  font-size: 15px;
  color: whitesmoke;
}
footer {
  background-color: rgb(1, 27, 27);
  color: rgb(240, 217, 217);
  text-align: center;
  padding: 10px;
  margin-top: 20px;
}
footer a {
  color: rgb(240, 217, 217);
  text-decoration: none;
}
footer a:hover {
  text-decoration: underline;
}
.about-photographer {
  display: flex;
  align-items: center;
  gap: 20px;
  padding: 21px;
  border-radius: 6px;
  text-align: center;
}
.photographer-photo {
  width: 300px;
  height: auto;
  display: block;
  margin: 20px auto;
  border-radius: 10px;
  transition: transform 0.3s ease;
  filter: 0.3s ease;
}
.photographer-photo:hover {
  transform: scale(1.1);
  filter: brightness(80%);
}
.about-photographer h2 {
  font-size: 15px;
  color: rgb(15, 15, 15);
  line-height: 1.5;
}
.about-photographer p {
  font-size: 14px;
  color: rgb(240, 217, 217);
  line-height: 1.5;
}
form {
  display: flex;
  flex-direction: column;
  gap: 10px;
  max-width: 400px;
  margin: 0 auto;
}
form label {
  font-weight: bold;
  display: block;
  margin-bottom: 8px;
  font-weight: 600;
}
form input,
form textarea,
form button {
  padding: 8px;
  width: 100%;
  font-size: 18px;
  border: 1px solid #ccc;
  border-radius: 0%;
  font-size: 16px;
}
form button {
  background-color: rgb(243, 248, 248);
  color: rgb(17, 17, 17);
  border: white;
  cursor: pointer;
  font-weight: 600;
}
form button:hover {
  background-color: rgb(1, 27, 27);
  color: white;
  transition:
    background-color 0.3s ease,
    color 0.3s ease;
}
.design-sketch {
  width: 80%;
  height: auto;
  height: auto;
  border-radius: 8px;
  margin-top: 20px;
}
#home {
  color: rgb(240, 217, 217);
}
#about {
  color: rgb(240, 217, 217);
}
#design  {
  color: rgb(240, 217, 217);
}
#contact {
  color: rgb(240, 217, 217);
} 
#gallery {
  color: rgb(240, 217, 217);
}

